--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "hasznaltautofotozas",
-  "version": "1.0.0",
-  "devDependencies": {
-    "@11ty/eleventy": "^3.1.2"
-  },
-  "scripts": {
-    "build": "eleventy"
-  }
+	"name": "hasznaltautofotozas",
+	"version": "1.0.0",
+	"devDependencies": {
+		"@11ty/eleventy": "^3.1.2",
+		"@11ty/eleventy-img": "^6.0.4"
+	},
+	"scripts": {
+		"build": "eleventy"
+	}
 }
